[package]
name = "quizinart"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ynaga/quizinart"
description = "A configurable quiz app with a PostgreSQL backend."
authors = ["frectonz"]

[dependencies]
bytes = "1.6.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
include_dir = "0.7.4"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
maud = { version = "0.27.0", features = ["axum"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-i18n = "3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "2.0.18"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.1.3"
urlencoding = "2.1"
argon2 = "0.5"

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.4"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

